47
================

25/07/23 Use CSS3 DnD grab/grabbing cursors when dragging and dropping in shelterview
25/07/23 Allow diet to be added as a column to find animal results
24/07/23 Warn when adopting animal with reservations to person without reserve #1278
24/07/23 Add extra emblems (orange/brown square/circle, soccer ball, lightning)
21/07/23 Allow import of incident data via CSV #1232
21/07/23 Use days for long term instead of months and make it configurable
20/07/23 Long term alert should use long term months config switch
19/07/23 Refactor animal/person warning code, consistent for transfer/reclaim
19/07/23 Show animal and person warnings when creating movements/reservations
19/07/23 Add $CURRENT_DATE_TIME$ token
17/07/23 Extend datepicker to -70 years
17/07/23 Validate additional fields for punctuation and unique/reserved names #1310
17/07/23 Refactor message board add dialog to match newer screens
17/07/23 Defensively handle bad image id inputs when loading images
14/07/23 Separate help menu for clarity
14/07/23 Install recommended reports during database creation instead of /main
14/07/23 Fix bug where 0.0 weight logs appear after a cloned animal is edited
13/07/23 Fixed bug that could cause DOB to be reset to today during CSV import
12/07/23 Add <<ActiveAnimalMedicals>> wordkey
12/07/23 Ability to generate random licence numbers, fix bug in licence display
12/07/23 New location filter: My coordinated animals
11/07/23 Users can now choose their preferred shelter view mode #1114
11/07/23 additional fields in autocomplete when entering online form names #1309
06/07/23 Allow CSV animal deceased fields to be updated on existing records
05/07/23 Refactor login and valid user check, remove redundant code
05/07/23 CSV import fields: ANIMALDECEASEDREASON/NOTES, ANIMALEUTHANIZED
05/07/23 Add Adoption Coordinator to find animal result columns
05/07/23 Set stripe API version it was written for in codebase