@@ -1,6 +1,7 @@
 47
 ================
 
+31/07/23 Add form field to indicate merge person, create without merge option #1308
 25/07/23 Use CSS3 DnD grab/grabbing cursors when dragging and dropping in shelterview
 25/07/23 Allow diet to be added as a column to find animal results
 24/07/23 Warn when adopting animal with reservations to person without reserve #1278
